edit manifest name

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 2,
-  "name": "Twitch Channel Points Auto-Claimer",
+  "name": "Twitch Channel Points Auto-Claimer for Chrome",
   "version": "1.0",
   "description": "An extension that automatically claims channel points on Twitch.tv, ensuring you never miss out on bonuses!",
   "permissions": ["activeTab", "https://twitch.tv/*"],
